# flappy-pretzel

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  compile_flags.txt  main  main.c
src/: audio.c  audio.h  common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  structs.h  text.c  text.h  update.c  update.h  util.c  util.h
